Opened 10 years ago

Closed 3 years ago

Last modified 3 years ago

#11753 closed bug (fixed)

BFS fails initializing 1.9TB size volume (KDL assert)

Reported by: kushalsingh007 Owned by: axeld
Priority: normal Milestone: R1/beta4
Component: File Systems/BFS Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by pulkomandy)

Initializing a new partition of size 1992294MB caused a KDL assert while formatting the disk and creation partition failed.

Attachments (1)

Screenshot.png (40.2 KB ) - added by kushalsingh007 10 years ago.
Screenshot for the bug has added.

Download all attachments as: .zip

Change History (10)

by kushalsingh007, 10 years ago

Attachment: Screenshot.png added

Screenshot for the bug has added.

comment:1 by phoudoin, 10 years ago

Overall, there is several uint32 -> int32 cast in bfs kernel add-on code, fNumBits in AllocationGroup being one exemple.

Here, the assert should be fixed to work on uint32, but there is other place to fix similar issue most probably.

Time to offer a 3TB disk to Axel :)

comment:2 by pulkomandy, 10 years ago

Description: modified (diff)
Summary: Partitioning fails at 1.9TB size due to KDL assertBFS fails initializing 1.9TB size volume (KDL assert)

comment:3 by pulkomandy, 10 years ago

No need for an actual disk, this can easily be tested in a virtual machine with a sparse HD image.

comment:4 by axeld, 8 years ago

What block size has been used? I've definitely initialized a 3 TB BFS volume already in the past. Has anybody tried to reproduce the issue?

comment:6 by korli, 3 years ago

Resolution: fixed
Status: newclosed

Applied in hrev56221

comment:7 by axeld, 3 years ago

Nice catch! Must be an issue with a smaller block size, as this didn't even happen with 8 TB BFS volumes.

comment:8 by korli, 3 years ago

Well an oversight it seems, the log start can now be in another allocation group. https://review.haiku-os.org/c/haiku/+/5420

comment:9 by korli, 3 years ago

Improved in hrev56232

Note: See TracTickets for help on using tickets.